force-app/main/default/objects/MyGRAppSetting__mdt.object
<CustomObject>
    <description>My App for graduate research rules</description>
    <fields>
        <fullName>Award_Name__c</fullName>
        <description>Award Name/Type</description>
        <label>Award Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUSAID</fullName>
                    <default>true</default>
                    <label>Australian Awards Scholarship (formerly AusAID)</label>
                </value>
                <value>
                    <fullName>APA</fullName>
                    <label>Australian Postgraduate Award (APA)</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                    <label>Endeavour Scholarship</label>
                </value>
                <value>
                    <fullName>IPRS</fullName>
                    <label>International Postgraduate Research Scholarship (IPRS)</label>
                </value>
                <value>
                    <fullName>MDS</fullName>
                    <label>Monash Departmental Scholarship</label>
                </value>
                <value>
                    <fullName>MGS</fullName>
                    <label>Monash Graduate Scholarship (MGS)</label>
                </value>
                <value>
                    <fullName>MIPRS</fullName>
                    <label>Monash International Postgraduate Research Scholarship (MIPRS)</label>
                </value>
                <value>
                    <fullName>MRS</fullName>
                    <label>Monash Research Scholarship</label>
                </value>
                <value>
                    <fullName>RTPS</fullName>
                    <label>RTP Stipend</label>
                </value>
                <value>
                    <fullName>RTPF</fullName>
                    <label>RTP Fees Offset</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other Award, Prize or Scholarship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creative_Work_Status__c</fullName>
        <description>Creative Work Status</description>
        <label>Creative Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCEPTED</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>IN-PRESS</fullName>
                    <label>In Press</label>
                </value>
                <value>
                    <fullName>PUBLISHED</fullName>
                    <label>Published</label>
                </value>
                <value>
                    <fullName>CR-STAT-NA</fullName>
                    <label>Not Applicable / Not Published</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Option_Order__c</fullName>
        <description>Deteremine the order of display for Declaration options on my.app</description>
        <label>Declaration Option Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Text__c</fullName>
        <description>To capture declaration/consent options selected by user on my.app</description>
        <label>Declaration Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exhibition_Type__c</fullName>
        <description>Exhibition Type</description>
        <label>Exhibition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EX-INSTALL</fullName>
                    <default>true</default>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>EX-PERFORM</fullName>
                    <label>Performance</label>
                </value>
                <value>
                    <fullName>EX-RELATED</fullName>
                    <label>Related Activity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if declaration should not be visible in HDR My.APP Declaration Form</description>
        <inlineHelpText>Check if declaration should not be visible in HDR My.APP Declaration Form</inlineHelpText>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Music_Status__c</fullName>
        <description>Music Status</description>
        <label>Music Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MU-RECORD</fullName>
                    <default>true</default>
                    <label>Performance Commercially Recorded</label>
                </value>
                <value>
                    <fullName>MU-CONCERT</fullName>
                    <label>Performance Recorded in Public Concert</label>
                </value>
                <value>
                    <fullName>MU-BCAST</fullName>
                    <label>Composition Broadcast</label>
                </value>
                <value>
                    <fullName>MU-PUBLISH</fullName>
                    <label>Composition Published</label>
                </value>
                <value>
                    <fullName>MU-RELEASE</fullName>
                    <label>Composition Released</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_or_Composition__c</fullName>
        <description>Performance or Composition</description>
        <label>Performance or Composition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MT-PERFORM</fullName>
                    <default>true</default>
                    <label>Performance</label>
                </value>
                <value>
                    <fullName>MT-COMPOSE</fullName>
                    <label>Composition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publication_Status__c</fullName>
        <description>Publication Status</description>
        <label>Publication Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCEPTED</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>IN-PRESS</fullName>
                    <label>In Press</label>
                </value>
                <value>
                    <fullName>PUBLISHED</fullName>
                    <label>Published</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <description>Publication Type</description>
        <label>Publication Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOK</fullName>
                    <default>true</default>
                    <label>Book</label>
                </value>
                <value>
                    <fullName>CHAPTER</fullName>
                    <label>Book Chapter</label>
                </value>
                <value>
                    <fullName>ARTICLE</fullName>
                    <label>Journal Article</label>
                </value>
                <value>
                    <fullName>CONF-PAPER</fullName>
                    <label>Conference Paper (not Poster or Abstract)</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other (e.g. Reports, Working Papers, Patents, Conference abstracts)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>Qualification Type</description>
        <label>Qualification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHD</fullName>
                    <default>true</default>
                    <label>PhD or Professional Doctorate</label>
                </value>
                <value>
                    <fullName>MASTER-RES</fullName>
                    <label>Masters by Research (66 - 100% Research Component)</label>
                </value>
                <value>
                    <fullName>MASTER-65</fullName>
                    <label>Masters (51 - 65% Research Component)</label>
                </value>
                <value>
                    <fullName>MASTER-CW</fullName>
                    <label>Masters (50-100% Coursework Component)</label>
                </value>
                <value>
                    <fullName>M-PRELIM</fullName>
                    <label>Master Preliminary</label>
                </value>
                <value>
                    <fullName>POST-DIP</fullName>
                    <label>Postgraduate Diploma</label>
                </value>
                <value>
                    <fullName>GRAD-DIP</fullName>
                    <label>Graduate Diploma</label>
                </value>
                <value>
                    <fullName>H1</fullName>
                    <label>Bachelors Degree Honours 1 (First Class)</label>
                </value>
                <value>
                    <fullName>H2A</fullName>
                    <label>Bachelors Degree Honours 2 (Second Class - upper) or equivalent</label>
                </value>
                <value>
                    <fullName>H2B</fullName>
                    <label>Bachelors Degree Honours 2 (Second Class - lower) or equivalent</label>
                </value>
                <value>
                    <fullName>H3</fullName>
                    <label>Bachelors Degree Honours 3 (Third Class) or equivalent</label>
                </value>
                <value>
                    <fullName>H-INCOMPLT</fullName>
                    <label>Bachelors Degree Honours (Not Yet Completed)</label>
                </value>
                <value>
                    <fullName>BACHELOR</fullName>
                    <label>Bachelors Degree (ungraded or pass)</label>
                </value>
                <value>
                    <fullName>DIPLOMA</fullName>
                    <label>Undergraduate Diploma</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other (Please specify)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theatre_Performance_Status__c</fullName>
        <description>Theatre Performance Status</description>
        <label>Theatre Performance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROFESSION</fullName>
                    <label>Professional</label>
                </value>
                <value>
                    <fullName>INDEPENDNT</fullName>
                    <label>Independent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MyGRAppSetting</label>
    <listViews>
        <fullName>DeclarationOptions</fullName>
        <columns>MasterLabel</columns>
        <columns>Declaration_Text__c</columns>
        <columns>Declaration_Option_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Declaration_Option_Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Declaration Options</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MyGRAppSetting</pluralLabel>
</CustomObject>